--- a/build.gradle
+++ b/build.gradle
@@ -20,9 +20,9 @@ plugins {
     id "net.minecraftforge.gradle.forge" version "2.0.2"
 }
 */
-version = "1.0"
-group= "com.yourname.modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "modid"
+version = "0.0.1"
+group= "com.squaresuits.magicpab" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = "MagicalPotionsAndBrews_1.9.4"
 
 minecraft {
     version = "1.9.4-12.17.0.1937"
