First stage of NEI integration

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,6 @@
 mc_version=1.12
+jei_mc_version=1.12.2
 bme_version=2.5.0-beta+
 orespawn_version=3.1.0.+
 cofhcore_version=4.3.5.+
+jei_version=4.8.4.129
