--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ buildscript {
 apply plugin: "net.minecraftforge.gradle.forge"
 apply plugin: 'com.matthewprenger.cursegradle'
 
+description = 'Alchemy Trinkets'
 def mod_file = getModFile()
 def mc_version = "1.12"
 def short_version = getVersion("VERSION", mod_file)
@@ -65,6 +66,11 @@ repositories {
     	name 'Covers Maven'
     	url 'http://maven.covers1624.net'
     }
+    maven {
+        // location of the maven that hosts JEI files
+        name = "Progwml6 maven"
+        url = "http://dvs1.progwml6.com/files/maven"
+    }
 }
 
 dependencies {
@@ -73,6 +79,10 @@ dependencies {
 	compile ("cofh:CoFHCore:${mc_version}-${cofhcore_version}:deobf") {
     	exclude group: 'mezz.jei'
     }
+    // compile against the JEI API but do not include it at runtime
+    deobfProvided "mezz.jei:jei_${jei_mc_version}:${jei_version}:api"
+    // at runtime, use the full JEI jar
+    runtime "mezz.jei:jei_${jei_mc_version}:${jei_version}"
 }
 
 processResources {
