--- a/minecraft/config/BaseMetals.cfg
+++ b/minecraft/config/BaseMetals.cfg
@@ -42,7 +42,7 @@ general {
     B:enforce_hardness=true
 
     # disable this and using_orespawn to make MMDLib based mods not spawn any ores [default: true]
-    B:fallback_orespawn=false
+    B:fallback_orespawn=true
 
     # Repair shields and armor with metal plates of the same type [default: true]
     B:repair_using_plates=true
@@ -57,7 +57,7 @@ general {
 
     # If false, then Base Metals will not require MMD Ore Spawn mod. 
     # Set to false if using another mod to manually handle ore generation. [default: true]
-    B:using_orespawn=false
+    B:using_orespawn=true
 }
 
 
