--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,7 @@ if (secretFile.exists()) {
 }
 
 minecraft {
-    version = "14.23.1.2556"
+    version = "1.12.2-14.23.1.2556"
     runDir = "minecraft"
     mappings = "snapshot_20170925"
 }
@@ -74,7 +74,10 @@ repositories {
 }
 
 dependencies {
-    compile "com.mcmoddev:OreSpawn:${mc_version}-${orespawn_version}:deobf"
+    deobfProvided ("com.mcmoddev:MMDLib:1.12-1.0.0-rc2.36+:deobf") {
+		exclude group: 'mezz.jei'
+    }
+	compile "com.mcmoddev:OreSpawn:1.12-3.3.1.179+:deobf"
     compile "com.mcmoddev:BaseMetals:${mc_version}-${bme_version}:deobf"
 	compile ("cofh:CoFHCore:${mc_version}-${cofhcore_version}:deobf") {
     	exclude group: 'mezz.jei'
